Fixed the Input show password icon not being aligned with the hide password one. Removed the padding-right from the input with the input's not a password input. Prevented the edit profile button from moving if the links were displayed.

--- a/frontend/src/components/form-elements/Input.module.scss
+++ b/frontend/src/components/form-elements/Input.module.scss
@@ -3,7 +3,7 @@
 .wrapper {
 	display: flex;
 	flex-direction: column;
-	width: 100%;
+	width: 18rem;
 }
 
 .input {
@@ -11,16 +11,20 @@
 
 	&__input {
 		width: 100%;
-		padding: 0.7rem 3rem 0.7rem 0.8rem;
+		// padding: 0.7rem 3rem 0.7rem 0.8rem;
+		padding: 0.7rem;
 		border-radius: 0.5rem;
 		color: $colorWhite;
 		font-family: $fontRegular;
 		font-size: 16px;
 		box-sizing: border-box;
-
 		resize: none;
 
-		&--basic {
+		&--password {
+			padding-right: 3rem;
+		}
+
+		&--purple {
 			border: 0.1rem solid $colorPurple2;
 			background-color: $colorPurple2;
 
@@ -30,7 +34,7 @@
 			}
 		}
 
-		&--profile {
+		&--black {
 			border: 0.1rem solid transparent;
 			background-color: #24263d;
 
@@ -56,6 +60,11 @@
 		top: 50%;
 		transform: translateY(-50%);
 		background: none;
+
+		&--open {
+			right: 0.66rem;
+			top: 46%;
+		}
 	}
 }
 
