--- a/frontend/src/components/pop-ups/LogOutConfirmation/LogOutConfirmation.module.scss
+++ b/frontend/src/components/pop-ups/LogOutConfirmation/LogOutConfirmation.module.scss
@@ -11,7 +11,7 @@
 	align-items: center;
 	gap: 1rem;
 	width: 100%;
-	max-width: 20rem;
+	// max-width: 25rem;
 	min-height: 4rem;
 	padding: 1rem 0;
 	border-radius: 1rem 1rem 0 0;
@@ -21,6 +21,7 @@
 }
 
 .message {
+	margin: 0 1rem;
 	font-family: $fontMedium;
 	font-size: 14px;
 	color: $colorBlack;
@@ -46,7 +47,7 @@
 	}
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 500px) {
 	.wrapper {
 		position: fixed;
 		top: 50%;
