--- a/frontend/src/containers/ViewsContainer/ViewsContainer.module.scss
+++ b/frontend/src/containers/ViewsContainer/ViewsContainer.module.scss
@@ -7,8 +7,26 @@
 	width: 100%;
 }
 
+@media screen and (min-width: 500px) {
+	.wrapper {
+		width: 80%;
+	}
+}
+
+@media screen and (min-width: 600px) {
+	.wrapper {
+		width: 75%;
+	}
+}
+
+@media screen and (min-width: 800px) {
+	.wrapper {
+		width: 50%;
+	}
+}
+
 @media screen and (min-width: 1200px) {
 	.wrapper {
-		width: 35%;
+		width: 40%;
 	}
 }
