--- a/frontend/src/pages/Homepage/HomepagePage/HomepagePage.module.scss
+++ b/frontend/src/pages/Homepage/HomepagePage/HomepagePage.module.scss
@@ -158,14 +158,15 @@
 	}
 
 	.forms {
-		margin: 0 auto;
+		margin: auto;
 		display: flex;
 		justify-content: center;
-		width: 25%;
+		min-width: 25%;
 		min-width: 25rem;
+		min-height: 40rem;
 		max-height: 50rem;
 		border-radius: 2rem;
-		box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+		box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
 		overflow: hidden;
 	}
 
