--- a/frontend/src/pages/log_in-sign_up/FormContainer/FormContainer.module.scss
+++ b/frontend/src/pages/log_in-sign_up/FormContainer/FormContainer.module.scss
@@ -6,13 +6,10 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: flex-start;
-	// max-width: 25rem;
 	width: 100%;
 	height: auto;
-	padding: 2rem 2rem 0 2rem;
-	// border: 10px solid $colorBlack;
-	// box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-	// border-radius: 2rem;
+	min-height: 100%;
+	padding: 2rem 2rem 4.5rem 2rem;
 	background-color: $colorPurple1;
 }
 
@@ -68,11 +65,11 @@
 .footer {
 	position: absolute;
 	bottom: 0;
-	width: 100%;
-	height: 4.5rem;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	width: 100%;
+	height: 4.5rem;
 	background-color: $colorPurple3;
 
 	&__text {
